--- a/index.html
+++ b/index.html
@@ -3,9 +3,115 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Lists</title>
 </head>
 <body>
-    
+    <h1>Working with lists</h1>
+
+    <h2>Unordered list</h2>
+
+    <h3>Custom style</h3>
+    <ul class="custom-style">
+        <li>Lorem ipsum dolor sit amet, consectetur adipisicing.</li>
+        <li>Iste, adipisci? Praesentium adipisci laudantium in doloribus!</li>
+        <li class="important">Ratione eligendi, dolores laboriosam qui fugit earum?</li>
+        <li>Ea laborum quia possimus dolorum, reprehenderit minus. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit.
+        </li>
+        <li>Architecto repellat laboriosam odit temporibus totam nemo.</li>
+    </ul>
+
+    <h3>Reset style</h3>
+    <ul class="reset-style">
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Culpa atque dolore ex perferendis.</li>
+        <li>Vitae pariatur ipsam laboriosam consectetur!</li>
+        <li>Laudantium doloremque natus rem libero.</li>
+    </ul>
+
+    <h3>Image marker style</h3>
+    <ul class="image-marker-style">
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Culpa atque dolore ex perferendis.</li>
+        <li>Vitae pariatur ipsam laboriosam consectetur!</li>
+        <li>Laudantium doloremque natus rem libero.</li>
+    </ul>
+
+    <h2>Ordered list</h2>
+
+    <h3>Custom style</h3>
+    <ol start="5" reversed class="custom-style">
+        <li>Lorem ipsum dolor sit amet consectetur.</li>
+        <li>Sequi, assumenda. Eaque aperiam accusamus animi.</li>
+        <li>Consequuntur, deleniti! Ab numquam amet ratione?</li>
+        <li value="10">Consectetur aliquam enim inventore soluta. Minima.</li>
+        <li>Quisquam aliquid quod laboriosam neque suscipit?</li>
+    </ol>
+    <hr>
+    <ol class="custom-style">
+        <li>Lorem ipsum dolor sit amet consectetur.</li>
+        <li>Sequi, assumenda. Eaque aperiam accusamus animi.</li>
+        <li>Consequuntur, deleniti! Ab numquam amet ratione?</li>
+        <li>Consectetur aliquam enim inventore soluta. Minima.</li>
+        <li>Quisquam aliquid quod laboriosam neque suscipit?</li>
+    </ol>
+
+    <h3>Custom marker content</h3>
+    <ol class="custom-marker-style">
+        <li>Lorem ipsum dolor sit amet consectetur.</li>
+        <li>Sint quos commodi laudantium debitis saepe!</li>
+        <li>Officia exercitationem rerum sit accusantium animi!</li>
+        <li>Maxime accusantium necessitatibus nesciunt recusandae autem!</li>
+    </ol>
+
+    <h2>Definition list</h2>
+
+    <dl>
+        <dt>HTML</dt>
+        <dd>
+            The HyperText Markup Language or HTML is the standard markup language for documents designed to be displayed in a web browser. It defines the meaning and structure of web content.
+        </dd>
+
+        <dt>CSS</dt>
+        <dd>
+            Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML or XML.
+        </dd>
+
+        <dt>JS</dt>
+        <dd>
+            JavaScript, often abbreviated as JS, is a programming language that is one of the core technologies of the World Wide Web, alongside HTML and CSS.
+        </dd>
+    </dl>
+
+    <h2>Multilevel lists</h2>
+
+    <ol class="multilevel-list">
+        <li>Lorem ipsum dolor sit, amet consectetur adipisicing.</li>
+        <li>Inner list
+            <ol>
+                <li>Lorem ipsum dolor sit.</li>
+                <li>Repellat hic dolorem ea!</li>
+            </ol>
+        </li>
+        <li>Libero illo sunt impedit maiores commodi iure.</li>
+        <li>Voluptatem, rerum voluptas error iusto nostrum maiores!
+            <ul>
+                <li>Lorem ipsum dolor sit amet.</li>
+                <li>Incidunt nisi maiores quaerat eveniet.</li>
+                <li>Tempore autem exercitationem natus quo.
+                    <ul>
+                        <li>Lorem ipsum dolor sit.</li>
+                        <li>Consequatur dicta vel vitae.</li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+        <li>Maxime assumenda ipsum voluptatibus obcaecati incidunt exercitationem.
+            <ol>
+                <li>Lorem ipsum dolor sit.</li>
+                <li>Magni inventore doloremque optio?</li>
+            </ol>
+        </li>
+    </ol>
 </body>
 </html>
